# cargo-workflows

./: .cargo.toml.un~  .gitignore  Cargo.toml  README.MD
examples/: README.md  build + run.toml  expand.toml
examples/errors/: README.md  empty-command-list.toml  no-default-workflow.toml
src/: args.rs  lib.rs  main.rs  run.rs  workflow_getter.rs
text/: workflows.toml
