[package]
name = "cargo-workflows"
version = "0.2.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/tadaHrd/cargo-workflows"
description = """
A library for running workflows.
"""

[badges.maintenance]
status = "deprecated"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.43"
toml = "0.7.4"
